Bug 500661 - Updates list sorted alphabetically shouldn't be case-sensitive - offline edition
Summary: Updates list sorted alphabetically shouldn't be case-sensitive - offline edition
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (offline) (other bugs)
Version First Reported In: 6.3.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-24 11:47 UTC by John Veness
Modified: 2025-03-08 23:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.3
Sentry Crash Report:


Attachments
Discover offline Updates case-sensitive sort (167.24 KB, image/png)
2025-02-24 11:47 UTC, John Veness
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Veness 2025-02-24 11:47:36 UTC
Created attachment 178798 [details]
Discover offline Updates case-sensitive sort

SUMMARY
When viewing the list of pending offline Updates, the list is currently case-sensitive, e.g. MozillaFirefox appears before codium. This should not be the case.

This is similar too, but not a duplicate of, recently fixed Bug 499638. That bug was for interactive updates and was kindly fixed by Harald Sitter with https://invent.kde.org/plasma/discover/-/merge_requests/1035. This bug is for offline updates, and is still present after that fix.

STEPS TO REPRODUCE
1. In System Settings, Software Update, have "Apply system updates: After rebooting" selected
2. Wait for many updates to be available, on an OS that tends to use mixed-case package names, e.g. openSUSE
3. Open Discover
4. Open Updates page
5. Click on the entry under System Software (with "X packages will be upgraded") and click More Information
6. View the list

OBSERVED RESULT
List is sorted case-sensitive alphabetically.

EXPECTED RESULT
List is sorted case-insensitive alphabetically.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20250220
KDE Plasma Version: 6.3.1
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.13.3-1-default (64-bit)
Graphics Platform: X11
Comment 1 Bug Janitor Service 2025-03-06 23:06:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1050
Comment 2 Bug Janitor Service 2025-03-08 19:12:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1052
Comment 3 Aleix Pol 2025-03-08 23:42:49 UTC
Git commit 42aa91b2c8bc3f7865dc1005b26d6b2debc52011 by Aleix Pol, on behalf of Nate Graham.
Committed on 08/03/2025 at 19:11.
Pushed by apol into branch 'master'.

Sort offline update items case-insensitively

Just like we sort online updates, which was implemented in
a58ac1270f6f130ec704dfbb6c72ff70f1b951c4.

Inspired in Nate's patch.
Related: bug 499638
FIXED-IN: 6.3.3

M  +12   -3    libdiscover/backends/PackageKitBackend/PackageKitUpdater.cpp

https://invent.kde.org/plasma/discover/-/commit/42aa91b2c8bc3f7865dc1005b26d6b2debc52011
Comment 4 Aleix Pol 2025-03-08 23:50:31 UTC
Git commit f8c36dcb607f2db3a384e46bbbe7379029c55217 by Aleix Pol Gonzalez.
Committed on 08/03/2025 at 23:43.
Pushed by apol into branch 'Plasma/6.3'.

Sort offline update items case-insensitively

Just like we sort online updates, which was implemented in
a58ac1270f6f130ec704dfbb6c72ff70f1b951c4.

Inspired in Nate's patch.
Related: bug 499638
FIXED-IN: 6.3.3


(cherry picked from commit 42aa91b2c8bc3f7865dc1005b26d6b2debc52011)

Co-authored-by: Nate Graham <nate@kde.org>

M  +12   -3    libdiscover/backends/PackageKitBackend/PackageKitUpdater.cpp

https://invent.kde.org/plasma/discover/-/commit/f8c36dcb607f2db3a384e46bbbe7379029c55217