Sort offline update items case-insensitively

Just like we sort online updates, which was implemented in
a58ac1270f6f130ec704dfbb6c72ff70f1b951c4.

Inspired in Nate's patch.

BUG: 500661
CCBUG: 499638
FIXED-IN: 6.3.3